<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gradient_mapping</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="cqq1960180796@163.com">root</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>

  <depend>livox_ros_driver2</depend>
  <depend>messages</depend>

  <depend>VTK</depend>
  <depend>PCL</depend>
  <depend>EIGEN</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>